--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fleetify",
   "version": "0.1.0",
+  "description": "Make your Twitter profile pic look as if you have uploaded a fleet.",
   "private": true,
+  "homepage": "https://fleetify.vercel.app",
+  "repository": "https://github.com/ChalkPE/fleetify.git",
+  "license": "MIT",
+  "author": "Chalk <chalkpe@gmail.com> (https://twitter.com/chalk_alt)",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
